# diff2d

./: .gitignore  Cargo.toml  LICENSE  Readme.md  remarks.txt
2_Task_v4/: Task.md
src/: fractal.rs  hashmap.rs  libdif.rs  libgeom.rs  loadsdf.rs  main.rs  point.rs  print.rs  readme.txt  sort.rs  taskdif.rs  test.rs  vec.rs
src/taskdif/: libdif.rs  loadsdf.rs
