[package]
name = "diff2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
autodiff = "0.6.0"
pprof = { version = "0.11", features = ["flamegraph"] }
nalgebra = "0.32.2"
ndarray = "0.15.6"
